@@ -4,6 +4,13 @@ News: Paste Script
 svn trunk
 ---------
 
+* Fixed the CherryPy 3 WSGI server entry point's handling of SIGHUP
+  and SIGTERM
+
+* The CherryPy wsgiserver is now available at
+``paste.script.wsgiserver`` (no longer requiring CherryPy to be
+  installed)
+
 * Added entry point for twisted server
 
 1.1
